# PETsChallenge

./: README.md  main.py  requirements.txt
data/fincrime/centralized/test/: formatbuilder.py
examples_src/fincrime/: create_partition.py  finish_protocol+RF_DP.py  finish_protocol.py  model.py  pre-engineer_swift_features.py  solution_centralized.py  solution_centralized_1.py  solution_centralized_LR_DPSGD.py  solution_centralized_MLP2.py  solution_centralized_RF+DP.py  solution_centralized_original.py  solution_federated.py  solution_federated_original.py
examples_src/fincrime/diffprivlib/: accountant.py  base.py  binary.py  exponential.py  geometric.py  laplace.py  quantiles.py  tools_utils.py  utils.py  validation.py
private_consistency_checks/: Cargo.toml  README.md  private_consistency_checks.pyi  pyproject.toml
private_consistency_checks/curve25519-dalek-main/: README.md
private_consistency_checks/curve25519-dalek-main/src/: lib.rs  montgomery.rs
private_consistency_checks/src/: ciphertexts.rs  data_rows.rs  lib.rs  point_conversion.rs  wide_ciphertexts.rs
runtime/: main_centralized_test.py  main_centralized_train.py  main_federated_test.py  main_federated_train.py  supervisor.py
